[package]
edition = "2021"
name = "pico-display"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0.0"
defmt = "0.3"
defmt-rtt = "0.4"
rp-pico = "0.9"
fugit = "0.3.7"
mipidsi = "0.8.0"
display-interface-spi = "0.5.0"
ssd1306 = "0.9.0"
embedded-graphics = { version = "0.8.1", features = ["fixed_point"] }
panic-halt = "0.2.0"
critical-section = "1.1.3"

# If you're not going to use a Board Support Package you'll need these:
# rp2040-hal = { version="0.10", features=["rt", "critical-section-impl"] }
# rp2040-boot2 = "0.2"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
#
# # do not optimize proc-macro crates = faster builds from scratch
# [profile.dev.build-override]
# codegen-units = 8
# debug = false
# debug-assertions = false
# opt-level = 0
# overflow-checks = false
#
# [profile.release.build-override]
# codegen-units = 8
# debug = false
# debug-assertions = false
# opt-level = 0
# overflow-checks = false
#
# # cargo test
# [profile.test]
# codegen-units = 1
# debug = 2
# debug-assertions = true
# incremental = false
# opt-level = 3
# overflow-checks = true
#
# # cargo test --release
# [profile.bench]
# codegen-units = 1
# debug = 2
# debug-assertions = false
# incremental = false
# lto = 'fat'
# opt-level = 3
